--- a/style/styles.css
+++ b/style/styles.css
@@ -7,7 +7,16 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color: #f3f1ff;
 }
-
+.top-header{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(132, 132, 243);
+    align-items: center;
+    font-size: 20px;
+}
+.link a{
+    text-decoration: none;
+}
 
 .container{
     background-color: #fff;
